# network-analysis-lab

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  main.cpp
core/examples/: GraphExamples.cpp  GraphExamples.h
core/graph/: Edge.h  Graph.cpp  Graph.h
core/include/: BFS.h  Edge.h  Graph.h  GraphExamples.h
core/reachability/: BFS.h  BridgeDetector.h  ReachabilityAnalyzer.cpp  ReachabilityAnalyzer.h
core/routing/: AStar.cpp  AStar.h  Dijkstra.cpp  Dijkstra.h  Metrics.h
core/src/: BFS.cpp  Graph.cpp  GraphExamples.cpp  main.cpp
gui/: CMakeLists.txt
gui/include/: App.h  AppState.h  GraphRenderer.h
gui/src/: App.cpp  AppPanels.cpp  AppState.cpp  GraphRenderer.cpp  main.cpp
